--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ language: java
 jdk:
 - openjdk8
 script: mvn clean verify
+deploy:
+  provider: heroku
+  api_key:
+    secure: "177e9bdd-e474-4a7e-b553-732303cfff7b"
